# iota-identity-iot

./: .gitignore  Cargo.toml  PROJECT_TREE.md  README.md  SYSTEM_DOCUMENTATION.md  benchmark_10000dev_20260209_210503.json  benchmark_1000dev_20260209_134305.json  benchmark_tls_cold.py  benchmark_tls_warm.py
bench-client/: credential.jwt  identity.json  private_key.hex
bench-server/: credential.jwt  identity.json  private_key.hex
benchmark-results/: benchmark_log_20260203_133546.txt  benchmark_log_20260203_134709.txt  benchmark_log_20260203_175154.txt
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
demo/gateway/: credential.jwt  identity.json  private_key.hex
demo/sensor/: credential.jwt  identity.json  private_key.hex
device-client/: Cargo.toml
device-client-data/: credential.jwt  identity.json  private_key.hex
device-client/src/: lib.rs  main.rs
device-client/src/identity/: mod.rs
device-client/src/registration/: mod.rs
device-client/src/resolver/: mod.rs
device-client/src/storage/: mod.rs
device-client/src/tls/: mod.rs  verifier.rs
device-deactivate-test/: credential.jwt  identity.json  private_key.hex
device-rotate-test/: credential.jwt  identity.json  private_key.hex
device-server/: credential.jwt  identity.json  private_key.hex
identity-service/: Cargo.toml
identity-service/src/: lib.rs  main.rs
identity-service/src/api/: mod.rs
identity-service/src/cache/: mod.rs
identity-service/src/credential/: mod.rs
identity-service/src/did/: mod.rs
identity-service/src/revocation/: bitmap.rs  mod.rs
shared/: Cargo.toml
shared/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs
test-scripts/: MANUAL_TESTS.md  manual_tests.sh  test_complete_system.sh  test_full_coverage.sh  test_new_features.sh
tools/: accumulate_tokens.py  derive_address.py  parallel_benchmark.py  run_benchmarks.sh  test_registration.py
