[package]
name = "device-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Device client for IOTA Rebased IoT authentication"

[[bin]]
name = "device-client"
path = "src/main.rs"

[dependencies]
# Internal crate
shared = { path = "../shared" }

# IOTA Rebased
identity_iota.workspace = true
# NOTE: identity_stronghold not available yet for Rebased

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# TLS
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true
x509-parser.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Caching
moka.workspace = true

# Cryptography
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
sha2.workspace = true
bs58 = "0.5"

# Error handling & logging
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
chrono.workspace = true
uuid.workspace = true
url.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
urlencoding.workspace = true
clap.workspace = true

# Revocation bitmap (for local verification of RevocationBitmap2022)
roaring = "0.10"
flate2 = "1.0"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true